docs/apache-airflow-providers-amazon/9.2.0/_sources/_api/airflow/providers/amazon/aws/hooks/redshift_data/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.hooks.redshift_data`
==========================================================

.. py:module:: airflow.providers.amazon.aws.hooks.redshift_data


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.redshift_data.QueryExecutionOutput
   airflow.providers.amazon.aws.hooks.redshift_data.RedshiftDataHook




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.redshift_data.FINISHED_STATE
   airflow.providers.amazon.aws.hooks.redshift_data.FAILED_STATE
   airflow.providers.amazon.aws.hooks.redshift_data.ABORTED_STATE
   airflow.providers.amazon.aws.hooks.redshift_data.FAILURE_STATES
   airflow.providers.amazon.aws.hooks.redshift_data.RUNNING_STATES


.. py:data:: FINISHED_STATE
   :value: 'FINISHED'

   

.. py:data:: FAILED_STATE
   :value: 'FAILED'

   

.. py:data:: ABORTED_STATE
   :value: 'ABORTED'

   

.. py:data:: FAILURE_STATES

   

.. py:data:: RUNNING_STATES

   

.. py:class:: QueryExecutionOutput


   Describes the output of a query execution.

   .. py:attribute:: statement_id
      :type: str

      

   .. py:attribute:: session_id
      :type: str | None

      


.. py:exception:: RedshiftDataQueryFailedError


   Bases: :py:obj:`ValueError`

   Raise an error that redshift data query failed.


.. py:exception:: RedshiftDataQueryAbortedError


   Bases: :py:obj:`ValueError`

   Raise an error that redshift data query was aborted.


.. py:class:: RedshiftDataHook(*args, **kwargs)


   Bases: :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsGenericHook`\ [\ :py:obj:`mypy_boto3_redshift_data.RedshiftDataAPIServiceClient`\ ]

   Interact with Amazon Redshift Data API.

   Provide thin wrapper around
   :external+boto3:py:class:`boto3.client("redshift-data") <RedshiftDataAPIService.Client>`.

   Additional arguments (such as ``aws_conn_id``) may be specified and
   are passed down to the underlying AwsBaseHook.

   .. seealso::
       - :class:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`
       - `Amazon Redshift Data API         <https://docs.aws.amazon.com/redshift-data/latest/APIReference/Welcome.html>`__

   .. py:method:: execute_query(sql, database = None, cluster_identifier = None, db_user = None, parameters = None, secret_arn = None, statement_name = None, with_event = False, wait_for_completion = True, poll_interval = 10, workgroup_name = None, session_id = None, session_keep_alive_seconds = None)

      Execute a statement against Amazon Redshift.

      :param sql: the SQL statement or list of  SQL statement to run
      :param database: the name of the database
      :param cluster_identifier: unique identifier of a cluster
      :param db_user: the database username
      :param parameters: the parameters for the SQL statement
      :param secret_arn: the name or ARN of the secret that enables db access
      :param statement_name: the name of the SQL statement
      :param with_event: whether to send an event to EventBridge
      :param wait_for_completion: whether to wait for a result
      :param poll_interval: how often in seconds to check the query status
      :param workgroup_name: name of the Redshift Serverless workgroup. Mutually exclusive with
          `cluster_identifier`. Specify this parameter to query Redshift Serverless. More info
          https://docs.aws.amazon.com/redshift/latest/mgmt/working-with-serverless.html
      :param session_id: the session identifier of the query
      :param session_keep_alive_seconds: duration in seconds to keep the session alive after the query
          finishes. The maximum time a session can keep alive is 24 hours

      :returns statement_id: str, the UUID of the statement


   .. py:method:: wait_for_results(statement_id, poll_interval)


   .. py:method:: check_query_is_finished(statement_id)

      Check whether query finished, raise exception is failed.


   .. py:method:: parse_statement_response(resp)

      Parse the response of describe_statement.


   .. py:method:: get_table_primary_key(table, database, schema = 'public', cluster_identifier = None, workgroup_name = None, db_user = None, secret_arn = None, statement_name = None, with_event = False, wait_for_completion = True, poll_interval = 10)

      Return the table primary key.

      Copied from ``RedshiftSQLHook.get_table_primary_key()``

      :param table: Name of the target table
      :param database: the name of the database
      :param schema: Name of the target schema, public by default
      :param cluster_identifier: unique identifier of a cluster
      :param workgroup_name: name of the Redshift Serverless workgroup. Mutually exclusive with
          `cluster_identifier`. Specify this parameter to query Redshift Serverless. More info
          https://docs.aws.amazon.com/redshift/latest/mgmt/working-with-serverless.html
      :param db_user: the database username
      :param secret_arn: the name or ARN of the secret that enables db access
      :param statement_name: the name of the SQL statement
      :param with_event: indicates whether to send an event to EventBridge
      :param wait_for_completion: indicates whether to wait for a result, if True wait, if False don't wait
      :param poll_interval: how often in seconds to check the query status

      :return: Primary key columns list


   .. py:method:: is_still_running(statement_id)
      :async:

      Async function to check whether the query is still running.

      :param statement_id: the UUID of the statement


   .. py:method:: check_query_is_finished_async(statement_id)
      :async:

      Async function to check statement is finished.

      It takes statement_id, makes async connection to redshift data to get the query status
      by statement_id and returns the query status.

      :param statement_id: the UUID of the statement



